@@ -45,3 +45,6 @@ More changes in display handler iot avoid display hickups during host print. Mod
 
 05 JAN 2025:
 Fixed display software version in printer info screen.
+
+15 JAN 2025:
+Fixed offset float to integer conversion bug. Cleared preset values for X- and Y-offset: both offsets will be 0.0 after EEPROM reset. Added X-axis homing after tramming.
